--- a/handyman/garage/index.html
+++ b/handyman/garage/index.html
@@ -3,13 +3,13 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="icon" type="image/png" href="/assets/8b9eb19119592679c97707c257d88026.a02f38e2.png">
+  <link rel="icon" type="image/png" href="/slides/handyman/garage/assets/8b9eb19119592679c97707c257d88026.a02f38e2.png">
   
 <link rel="icon" type="image/png" href="https://avatars.githubusercontent.com/u/942449?s=60" />
 <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=PT+Serif:wght@200;400;600&family=PT+Mono:wght@200;400;600&display=swap" type="text/css">
-  <script type="module" crossorigin src="/assets/index.451fa079.js"></script>
-    <link rel="modulepreload" href="/assets/vendor.6c0c8da8.js">
-    <link rel="stylesheet" href="/assets/vendor.7f4e9c32.css">
+  <script type="module" crossorigin src="/slides/handyman/garage/assets/index.3fb3c4bc.js"></script>
+    <link rel="modulepreload" href="/slides/handyman/garage/assets/vendor.ab65fba6.js">
+    <link rel="stylesheet" href="/slides/handyman/garage/assets/vendor.7f4e9c32.css">
   </head>
 <body>
   <div id="app"></div>
